fix(home): update map reset button style that prevents overflow

--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -14,6 +14,7 @@
     margin-left: calc(50px + #{$bego-menu-width});
     pointer-events: none;
     z-index: 2;
+    overflow: hidden;
 
     .new-order-details{
         flex-grow: 1;
